--- a/styles.css
+++ b/styles.css
@@ -1,59 +1,59 @@
-body {
-  font-family: Arial, sans-serif;
-  text-align: center;
+body{
   margin: 0;
-  padding: 0;
-  background-color: #f0f8ff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: hsl(0, 0%, 95%);
 }
-
-.container {
-  width: 80%;
-  margin: 0 auto;
+#calculator{
+  font-family: Arial, sans-serif;
+  background-color: hsl(0, 0%, 15%);
+  border-radius: 15px;
+  max-width: 500px;
+  overflow: hidden;
+}
+#display{
+  width: 100%;
   padding: 20px;
-  background-color: white;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-}
-
-input, button {
-  display: block;
-  margin: 10px auto;
-  padding: 10px;
-  width: 80%;
-  font-size: 16px;
-}
-
-canvas {
-  display: block;
-  margin: 20px auto;
-  max-width: 100%;
-}
-
-button {
-  background-color: #007BFF;
-  color: white;
+  font-size: 5rem;
+  text-align: left;
   border: none;
-  cursor: pointer;
-}
+  background-color: hsl(0, 0%, 20%);
+  color: white;
 
-button:hover {
-  background-color: #0056b3;
 }
+#keys{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  gap: 10px;
+  padding: 25px;
 
-label {
-  display: block;
-  margin: 10px auto;
+}
+button{
+  width : 100px;
+  height : 100px;
+  border-radius: 50px;
+  border: none;
+  background-color: hsl(0, 0%, 30%);
+  color: white;
+  font-size: 3rem;
   font-weight: bold;
-}
+  cursor: pointer;
 
-h2, h3 {
-  color: #333;
 }
-
-.subtitle {
-  font-size: 17px;
-  color: gray;
-  text-align: center;
-  margin-top: 0;
-  margin-bottom: 20px;
+button:hover{
+  background-color: hsl(0, 0%, 40%);
+}
+button:active{
+  background-color: hsl(0, 0%, 50%);
+}
+.operator-btn{
+  background-color: hsl(35, 100%, 55%);
+}
+.operator-btn:hover{
+  background-color: hsl(35, 100%, 65%);
+}
+.operator-btn:active{
+  background-color: hsl(35, 100%, 75%);
 }
